--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.0",
+    "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "slick-carousel": "^1.8.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
