--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-router": "^7.8.2",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
@@ -43,6 +44,7 @@
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-imagetools": "^8.0.0"
   }
 }
